fix: Button mobile

--- a/src/style.css
+++ b/src/style.css
@@ -1018,7 +1018,7 @@ button:focus,
     }
     
     .btn {
-        width: 100%;
+        width: 70%;
         text-align: center;
     }
     
